# Eva

./: .clang-format  .gitignore  CMakeLists.txt  README.md  backup.bat  run.bat  xmake.lua
Camera/: OrthographicCamera.cpp  OrthographicCameraController.cpp
Renderer/: Buffer.cpp  GraphicsContext.cpp  OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture.cpp  OpenGLVertexArray.cpp  RenderCommand.cpp  Renderer.cpp  Renderer2D.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  stb_image.cpp
Shader/: Shader.cpp
include/: Application.h  ApplicationEvent.h  Buffer.h  Event.h  ImGuiLayer.h  Input.h  KeyCodes.h  KeyEvent.h  Layer.h  LayerStack.h  Log.h  MouseButtonCodes.h  MouseEvent.h  OpenGLBuffer.h  OpenGLRendererAPI.h  OpenGLShader.h  OpenGLTexture.h  OpenGLVertexArray.h  OrthographicCamera.h  OrthographicCameraController.h  RenderCommand.h  Renderer.h  Renderer2D.h  RendererAPI.h  SandBox2D.h  SandBoxApp.h  Shader.h  Texture.h  Timestep.h  VertexArray.h  Window.h  WindowWindow.h  WindowsInput.h
include/Renderer/: GraphicsContext.h  OpenGLContext.h
include/eva/: Assert.h  Core.h  Hazel.h  KeyCodes.h  MouseCodes.h  eva.h
include/glad/: glad.h
include/hazel/: Core.h
include/spdlog/: common.h
shaders/: FlatColor.glsl  Texture.glsl
src/: Application.cpp  CMakeLists.txt  EntryPoint.cpp  ImGuiBuild.cpp  ImGuiLayer.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  OpenGLVertexArray.cpp  RendererAPI.cpp  SandBox2D.cpp  SandBoxApp.cpp  WindownWindown.cpp  WindowsInput.cpp  eva.h  glad.c  main.cpp
